project/stage/testing/lexical/parse_tests/tests/reject/bad_statements/bad_while/before_var_decl.ul
void main () {
    while (true) {}
    boolean wOOP_1123;
}
